Add verification for discretized rel_actions artifacts

--- a/notebooks/pusht_discretization_codebooks.ipynb
+++ b/notebooks/pusht_discretization_codebooks.ipynb
@@ -301,6 +301,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Verify discretized rel_actions files ===\n",
+    "print(\"\\n== Checking discretized rel_actions artifacts ==\")\n",
+    "for split in SPLITS:\n",
+    "    print(f\"[{split}]\")\n",
+    "    for variant in VARIANTS.keys():\n",
+    "        rel_path = Path(split) / f\"rel_actions_discretized_{variant}.pth\"\n",
+    "        abs_path = DST_DATASET_DIR / rel_path\n",
+    "        if not abs_path.exists():\n",
+    "            raise FileNotFoundError(f\"Missing {rel_path} in {DST_DATASET_DIR}\")\n",
+    "        size_mb = abs_path.stat().st_size / (1024 ** 2)\n",
+    "        print(f\"  - {rel_path.name:>32} | size={size_mb:8.2f} MB\")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "metadata": {},
    "execution_count": null,
    "outputs": [],
