Adjust fixed compass discretization

--- a/notebooks/pusht_discretization_codebooks.ipynb
+++ b/notebooks/pusht_discretization_codebooks.ipynb
@@ -45,7 +45,7 @@
     "VARIANTS = {\n",
     "    \"kmeans_k9\": {\"type\": \"kmeans\", \"K\": 9},\n",
     "    \"kmeans_k15\": {\"type\": \"kmeans\", \"K\": 15},\n",
-    "    \"fixed_compass_r24\": {\"type\": \"fixed_compass\", \"r\": 24.0},\n",
+    "    \"fixed_compass_r24\": {\"type\": \"fixed_compass\", \"r\": 24.0, \"n_dirs\": 4, \"include_center\": True},\n",
     "}\n",
     "\n",
     "SUBSET_SPECS = {\n",
@@ -161,10 +161,14 @@
     "    return out\n",
     "\n",
     "\n",
-    "def build_fixed_compass(r: float, n_dirs: int = 8) -> np.ndarray:\n",
+    "def build_fixed_compass(r: float, n_dirs: int = 8, include_center: bool = True) -> np.ndarray:\n",
+    "    assert n_dirs > 0, \"n_dirs must be positive\"\n",
     "    dirs = np.linspace(0.0, 2.0 * math.pi, n_dirs, endpoint=False)\n",
-    "    vecs = np.stack([np.cos(dirs), np.sin(dirs)], axis=1) * float(r)\n",
-    "    centers = np.vstack([np.zeros((1, 2), dtype=np.float32), vecs.astype(np.float32)])\n",
+    "    vecs = np.stack([np.cos(dirs), np.sin(dirs)], axis=1).astype(np.float32) * float(r)\n",
+    "    if include_center:\n",
+    "        centers = np.vstack([np.zeros((1, 2), dtype=np.float32), vecs])\n",
+    "    else:\n",
+    "        centers = vecs\n",
     "    return centers.astype(np.float32)\n",
     "\n",
     "\n",
@@ -238,7 +242,7 @@
     "            name + \"_sample\",\n",
     "        )\n",
     "    elif cfg[\"type\"] == \"fixed_compass\":\n",
-    "        centers = build_fixed_compass(cfg[\"r\"])\n",
+    "        centers = build_fixed_compass(cfg[\"r\"], n_dirs=cfg.get(\"n_dirs\", 8), include_center=cfg.get(\"include_center\", True))\n",
     "    else:\n",
     "        raise ValueError(f\"Unknown variant type: {cfg['type']}\")\n",
     "\n",
