--- a/notebooks/pusht_discretization_codebooks.ipynb
+++ b/notebooks/pusht_discretization_codebooks.ipynb
@@ -20,8 +20,20 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
    "execution_count": null,
+   "id": "078838e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ[\"DATASET_DIR\"] = \"/Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f89c7ec3",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# === Imports & global config ===\n",
@@ -80,8 +92,9 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
    "execution_count": null,
+   "id": "faf56611",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# === Discretization helpers ===\n",
@@ -184,8 +197,9 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
    "execution_count": null,
+   "id": "9b901da5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# === Copy dataset & gather metadata ===\n",
@@ -218,8 +232,9 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
    "execution_count": null,
+   "id": "0a9290b5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# === Fit codebooks (MiniBatchKMeans + fixed compass) ===\n",
@@ -260,8 +275,9 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
    "execution_count": null,
+   "id": "90673e3a",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# === Discretize rel_actions & add states_constant ===\n",
@@ -306,6 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e74cc869",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,8 +342,8 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# === Subset helpers (1k / 10k datasets) ===\n",
@@ -430,8 +447,8 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# === Build subset datasets (1k / 10k trajectories) ===\n",
