Handle list artifacts and keep tensor dtype

--- a/notebooks/pusht_discretization_codebooks.ipynb
+++ b/notebooks/pusht_discretization_codebooks.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "# === Discretization helpers ===\n",
     "def load_actions_and_lengths(split_dir: Path):\n",
-    "    actions = torch.load(split_dir / ACTIONS_FNAME, map_location=\"cpu\").float()\n",
+    "    actions = torch.load(split_dir / ACTIONS_FNAME, map_location=\"cpu\")\n",
     "    with open(split_dir / LENGTHS_FNAME, \"rb\") as f:\n",
     "        lengths = np.asarray(pickle.load(f), dtype=np.int64)\n",
     "    assert actions.shape[0] == len(lengths), f\"Mismatch: {actions.shape[0]} tensors vs {len(lengths)} lengths\"\n",
@@ -359,11 +359,15 @@
     "    if not path.exists():\n",
     "        return False\n",
     "    obj = torch.load(path, map_location=\"cpu\")\n",
-    "    if not torch.is_tensor(obj) or obj.shape[0] != orig_count:\n",
-    "        return False\n",
-    "    subset = obj[idxs]\n",
-    "    torch.save(subset, path)\n",
-    "    return True\n",
+    "    if torch.is_tensor(obj) and obj.shape[0] == orig_count:\n",
+    "        subset = obj[idxs]\n",
+    "        torch.save(subset, path)\n",
+    "        return True\n",
+    "    if isinstance(obj, (list, tuple)) and len(obj) == orig_count:\n",
+    "        subset = [obj[int(i)] for i in idxs]\n",
+    "        torch.save(subset, path)\n",
+    "        return True\n",
+    "    return False\n",
     "\n",
     "\n",
     "def subset_pickle_file(path: Path, idxs: np.ndarray, orig_count: int):\n",
