--- a/notebooks/pusht_discretization_codebooks.ipynb
+++ b/notebooks/pusht_discretization_codebooks.ipynb
@@ -20,33 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "078838e0",
+   "execution_count": null,
+   "id": "3ca121a6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ[\"DATASET_DIR\"] = \"/Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f89c7ec3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Source dataset : /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise\n",
-      "Discretized dir: /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized\n",
-      "Variants       : ['kmeans_k9', 'kmeans_k15', 'fixed_compass_r24']\n",
-      "Subset specs   : {'1k': 1000, '10k': 10000}\n",
-      "Random seed    : 0\n"
-     ]
-    }
-   ],
    "source": [
     "# === Imports & global config ===\n",
     "import os, gc, math, json, pickle, shutil, re\n",
@@ -104,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "faf56611",
+   "execution_count": null,
+   "id": "7c2a9032",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,22 +186,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9b901da5",
+   "execution_count": null,
+   "id": "2a71809c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying dataset tree from /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise -> /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized ...\n",
-      "Copy complete.\n",
-      "[train] episodes=18,685 | max_T=246\n",
-      "[val] episodes=21 | max_T=167\n",
-      "Total episodes across splits: 18,706\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === Copy dataset & gather metadata ===\n",
     "def ensure_dataset_copy(src: Path, dst: Path):\n",
@@ -256,55 +221,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0a9290b5",
+   "execution_count": null,
+   "id": "42f37096",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train valid steps: 2,336,736\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/julianquast/miniforge3/envs/dino_wm/lib/python3.10/site-packages/threadpoolctl.py:1226: RuntimeWarning: \n",
-      "Found Intel OpenMP ('libiomp') and LLVM OpenMP ('libomp') loaded at\n",
-      "the same time. Both libraries are known to be incompatible and this\n",
-      "can cause random crashes or deadlocks on Linux when loaded in the\n",
-      "same Python program.\n",
-      "Using threadpoolctl may cause crashes or deadlocks. For more\n",
-      "information and possible workarounds, please see\n",
-      "    https://github.com/joblib/threadpoolctl/blob/master/multiple_openmp.md\n",
-      "\n",
-      "  warnings.warn(msg, RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[kmeans_k9_sample] usage -> min=7473 max=50371 entropy=2.929 bits\n",
-      "Saved kmeans_k9 codebook -> /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/codebooks/kmeans_k9_centroids.npy | shape=(9, 2)\n",
-      "[kmeans_k15_sample] usage -> min=4014 max=31958 entropy=3.635 bits\n",
-      "Saved kmeans_k15 codebook -> /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/codebooks/kmeans_k15_centroids.npy | shape=(15, 2)\n",
-      "Saved fixed_compass_r24 codebook -> /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/codebooks/fixed_compass_r24_centroids.npy | shape=(5, 2)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === Fit codebooks (MiniBatchKMeans + fixed compass) ===\n",
     "CODEBOOK_DIR = DST_DATASET_DIR / \"codebooks\"\n",
@@ -344,37 +264,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "90673e3a",
+   "execution_count": null,
+   "id": "f5052dd6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "== Discretizing variant: kmeans_k9 ==\n",
-      "[train_kmeans_k9] usage -> min=91355 max=603892 entropy=2.914 bits\n",
-      "Saved /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/train/rel_actions_discretized_kmeans_k9.pth | shape=(18685, 246, 2)\n",
-      "[val_kmeans_k9] usage -> min=90 max=697 entropy=2.896 bits\n",
-      "Saved /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/val/rel_actions_discretized_kmeans_k9.pth | shape=(21, 246, 2)\n",
-      "\n",
-      "== Discretizing variant: kmeans_k15 ==\n",
-      "[train_kmeans_k15] usage -> min=54237 max=351409 entropy=3.625 bits\n",
-      "Saved /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/train/rel_actions_discretized_kmeans_k15.pth | shape=(18685, 246, 2)\n",
-      "[val_kmeans_k15] usage -> min=60 max=352 entropy=3.626 bits\n",
-      "Saved /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/val/rel_actions_discretized_kmeans_k15.pth | shape=(21, 246, 2)\n",
-      "\n",
-      "== Discretizing variant: fixed_compass_r24 ==\n",
-      "[train_fixed_compass_r24] usage -> min=346824 max=701174 entropy=2.277 bits\n",
-      "Saved /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/train/rel_actions_discretized_fixed_compass_r24.pth | shape=(18685, 246, 2)\n",
-      "[val_fixed_compass_r24] usage -> min=326 max=764 entropy=2.264 bits\n",
-      "Saved /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/val/rel_actions_discretized_fixed_compass_r24.pth | shape=(21, 246, 2)\n",
-      "Saved /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/train/states_constant.pth (zeros with shape=(18685, 246, 5))\n",
-      "Saved /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized/val/states_constant.pth (zeros with shape=(21, 246, 5))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === Discretize rel_actions & add states_constant ===\n",
     "def ensure_states_constant(split_dir: Path):\n",
@@ -417,29 +310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e74cc869",
+   "execution_count": null,
+   "id": "f1c7965b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "== Checking discretized rel_actions artifacts ==\n",
-      "[train]\n",
-      "  - rel_actions_discretized_kmeans_k9.pth | size=   70.14 MB\n",
-      "  - rel_actions_discretized_kmeans_k15.pth | size=   70.14 MB\n",
-      "  - rel_actions_discretized_fixed_compass_r24.pth | size=   70.14 MB\n",
-      "\n",
-      "[val]\n",
-      "  - rel_actions_discretized_kmeans_k9.pth | size=    0.04 MB\n",
-      "  - rel_actions_discretized_kmeans_k15.pth | size=    0.04 MB\n",
-      "  - rel_actions_discretized_fixed_compass_r24.pth | size=    0.04 MB\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === Verify discretized rel_actions files ===\n",
     "print(\"\\n== Checking discretized rel_actions artifacts ==\")\n",
@@ -457,8 +331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "eb1024dc",
+   "execution_count": null,
+   "id": "49a4cf6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,26 +437,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "4b35eda0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "== Building subset 1k (1000 trajectories) ==\n",
-      "[1k/train] keeping 999 / 18685 episodes\n",
-      "[1k/val] keeping 1 / 21 episodes\n",
-      "Subset 1k written to /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized_1k\n",
-      "\n",
-      "== Building subset 10k (10000 trajectories) ==\n",
-      "[10k/train] keeping 9989 / 18685 episodes\n",
-      "[10k/val] keeping 11 / 21 episodes\n",
-      "Subset 10k written to /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized_10k\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# === Build subset datasets (1k / 10k trajectories) ===\n",
     "subset_roots: Dict[str, Path] = {}\n",
@@ -613,21 +471,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dino_wm",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.x"
   }
  },
  "nbformat": 4,
