--- a/notebooks/pusht_discretization_verification.ipynb
+++ b/notebooks/pusht_discretization_verification.ipynb
@@ -18,10 +18,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "de4dafb3",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Source dataset       : /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise\n",
+            "Discretized dataset  : /Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized\n",
+            "Subset roots         : {'1k': PosixPath('/Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized_1k'), '10k': PosixPath('/Users/julianquast/Documents/Documents - pythonPedro (Mac)/Bachelor Thesis/Datasets/pusht_noise_discretized_10k')}\n",
+            "Variants             : ('kmeans_k9', 'kmeans_k15', 'fixed_compass_r24')\n"
+          ]
+        }
+      ],
       "source": [
         "# === Imports & configuration ===\n",
         "import os, gc, math, pickle\n",
@@ -68,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "2632fab2",
       "metadata": {},
       "outputs": [],
@@ -186,10 +197,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "1a308014",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[train] episode counts\n",
+            "source episodes     : 18685\n",
+            "discretized episodes: 18685\n",
+            "rel_actions identical: True (max diff=0.000e+00)\n",
+            "  kmeans_k9: mean|Δ|=3.7636, max|Δ|=153.7511, unique centroids=10\n",
+            "  kmeans_k15: mean|Δ|=3.0071, max|Δ|=144.6930, unique centroids=16\n",
+            "  fixed_compass_r24: mean|Δ|=4.6653, max|Δ|=180.2670, unique centroids=5\n",
+            "states_constant zeros check: max|value|=0.000e+00\n",
+            "\n",
+            "[val] episode counts\n",
+            "source episodes     : 21\n",
+            "discretized episodes: 21\n",
+            "rel_actions identical: True (max diff=0.000e+00)\n",
+            "  kmeans_k9: mean|Δ|=3.5948, max|Δ|=71.3540, unique centroids=10\n",
+            "  kmeans_k15: mean|Δ|=2.8930, max|Δ|=66.2523, unique centroids=16\n",
+            "  fixed_compass_r24: mean|Δ|=4.4253, max|Δ|=89.8806, unique centroids=5\n",
+            "states_constant zeros check: max|value|=0.000e+00\n"
+          ]
+        }
+      ],
       "source": [
         "# === Detailed comparison: source vs discretized base dataset ===\n",
         "variant_stats: List[Dict[str, object]] = []\n",
@@ -257,10 +293,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "ad7ac92f",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "== Checking subset 1k (1000 requested trajectories) ==\n",
+            "expected total: 1000, actual total: 1000\n",
+            "[1k/train] episodes: 999 (expected 999), steps: 125676\n",
+            "    lengths range: [49, 246]\n",
+            "[1k/val] episodes: 1 (expected 1), steps: 114\n",
+            "    lengths range: [114, 114]\n",
+            "\n",
+            "== Checking subset 10k (10000 requested trajectories) ==\n",
+            "expected total: 10000, actual total: 10000\n",
+            "[10k/train] episodes: 9989 (expected 9989), steps: 1243713\n",
+            "    lengths range: [49, 246]\n",
+            "[10k/val] episodes: 11 (expected 11), steps: 1317\n",
+            "    lengths range: [76, 167]\n"
+          ]
+        }
+      ],
       "source": [
         "# === Subset dataset verification (1k / 10k trajectories) ===\n",
         "base_counts_for_alloc = {split: {\"num_episodes\": discretized_meta[split][\"num_episodes\"]} for split in SPLITS}\n",
@@ -294,10 +351,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "e49749c9",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Split   Variant                  mean|Δ|      max|Δ|   Centroids\n",
+            "----------------------------------------------------------------\n",
+            "train   kmeans_k9               3.763560  153.751147          10\n",
+            "train   kmeans_k15              3.007122  144.692996          16\n",
+            "train   fixed_compass_r24       4.665251  180.266978           5\n",
+            "val     kmeans_k9               3.594826   71.354050          10\n",
+            "val     kmeans_k15              2.893014   66.252327          16\n",
+            "val     fixed_compass_r24       4.425332   89.880615           5\n"
+          ]
+        }
+      ],
       "source": [
         "# === Aggregate discretization stats ===\n",
         "if not variant_stats:\n",
