Add centroid diagnostics and spot checks to verification notebook

--- a/notebooks/pusht_discretization_verification.ipynb
+++ b/notebooks/pusht_discretization_verification.ipynb
@@ -174,7 +174,8 @@
         "def count_observation_files(obs_dir: Path) -> int:\n",
         "    if not obs_dir.exists():\n",
         "        return 0\n",
-        "    return sum(1 for _ in obs_dir.glob(\"episode_*\"))\n"
+        "    return sum(1 for _ in obs_dir.glob(\"episode_*\"))\n",
+        "\n\ndef flatten_valid_tensor(tensor: torch.Tensor, lengths: np.ndarray) -> torch.Tensor:\n    lengths = np.asarray(lengths, dtype=np.int64)\n    if tensor.shape[0] != len(lengths):\n        raise ValueError(f\"Mismatch between tensor batch {tensor.shape[0]} and lengths {len(lengths)}\")\n    chunks: List[torch.Tensor] = []\n    for epi, L in enumerate(lengths):\n        L_int = int(L)\n        if L_int > 0:\n            chunks.append(tensor[epi, :L_int])\n    if not chunks:\n        return torch.empty((0, tensor.shape[-1]), dtype=tensor.dtype)\n    return torch.cat(chunks, dim=0)\n\n\ndef sample_valid_positions(lengths: np.ndarray, num_samples: int, rng=None) -> List[Tuple[int, int]]:\n    lengths = np.asarray(lengths, dtype=np.int64)\n    total_steps = int(lengths.sum())\n    if num_samples <= 0 or total_steps == 0:\n        return []\n    if rng is None:\n        rng = np.random.default_rng()\n    count = min(num_samples, total_steps)\n    flat_indices = np.asarray(rng.choice(total_steps, size=count, replace=False), dtype=np.int64)\n    flat_indices.sort()\n    cumulative = lengths.cumsum()\n    samples: List[Tuple[int, int]] = []\n    for idx in flat_indices:\n        epi = int(np.searchsorted(cumulative, idx, side='right'))\n        prev = int(cumulative[epi - 1]) if epi > 0 else 0\n        step = int(idx - prev)\n        samples.append((epi, step))\n    return samples\n"
       ]
     },
     {
@@ -210,18 +211,18 @@
             "source episodes     : 18685\n",
             "discretized episodes: 18685\n",
             "rel_actions identical: True (max diff=0.000e+00)\n",
-            "  kmeans_k9: mean|Δ|=3.7636, max|Δ|=153.7511, unique centroids=10\n",
-            "  kmeans_k15: mean|Δ|=3.0071, max|Δ|=144.6930, unique centroids=16\n",
-            "  fixed_compass_r24: mean|Δ|=4.6653, max|Δ|=180.2670, unique centroids=5\n",
+            "  kmeans_k9: mean|\u0394|=3.7636, max|\u0394|=153.7511, unique centroids=10\n",
+            "  kmeans_k15: mean|\u0394|=3.0071, max|\u0394|=144.6930, unique centroids=16\n",
+            "  fixed_compass_r24: mean|\u0394|=4.6653, max|\u0394|=180.2670, unique centroids=5\n",
             "states_constant zeros check: max|value|=0.000e+00\n",
             "\n",
             "[val] episode counts\n",
             "source episodes     : 21\n",
             "discretized episodes: 21\n",
             "rel_actions identical: True (max diff=0.000e+00)\n",
-            "  kmeans_k9: mean|Δ|=3.5948, max|Δ|=71.3540, unique centroids=10\n",
-            "  kmeans_k15: mean|Δ|=2.8930, max|Δ|=66.2523, unique centroids=16\n",
-            "  fixed_compass_r24: mean|Δ|=4.4253, max|Δ|=89.8806, unique centroids=5\n",
+            "  kmeans_k9: mean|\u0394|=3.5948, max|\u0394|=71.3540, unique centroids=10\n",
+            "  kmeans_k15: mean|\u0394|=2.8930, max|\u0394|=66.2523, unique centroids=16\n",
+            "  fixed_compass_r24: mean|\u0394|=4.4253, max|\u0394|=89.8806, unique centroids=5\n",
             "states_constant zeros check: max|value|=0.000e+00\n"
           ]
         }
@@ -279,7 +280,7 @@
         "        flat = var_tensor.reshape(-1, var_tensor.shape[-1])\n",
         "        unique_centroids = int(torch.unique(flat, dim=0).shape[0])\n",
         "        variant_stats.append({\"split\": split, \"variant\": variant, \"mean_abs_diff\": mean_abs, \"max_abs_diff\": max_abs, \"unique_centroids\": unique_centroids})\n",
-        "        print(f\"  {variant}: mean|Δ|={mean_abs:.4f}, max|Δ|={max_abs:.4f}, unique centroids={unique_centroids}\")\n",
+        "        print(f\"  {variant}: mean|\u0394|={mean_abs:.4f}, max|\u0394|={max_abs:.4f}, unique centroids={unique_centroids}\")\n",
         "        del var_tensor, delta, flat\n",
         "    states = torch.load(split_dir_dst / STATES_FNAME, map_location=\"cpu\")\n",
         "    states_const = torch.load(split_dir_dst / STATE_CONSTANT_FNAME, map_location=\"cpu\")\n",
@@ -359,7 +360,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Split   Variant                  mean|Δ|      max|Δ|   Centroids\n",
+            "Split   Variant                  mean|\u0394|      max|\u0394|   Centroids\n",
             "----------------------------------------------------------------\n",
             "train   kmeans_k9               3.763560  153.751147          10\n",
             "train   kmeans_k15              3.007122  144.692996          16\n",
@@ -375,11 +376,124 @@
         "if not variant_stats:\n",
         "    print(\"No variant statistics collected. Run the previous cell first.\")\n",
         "else:\n",
-        "    header = f\"{'Split':<8}{'Variant':<20}{'mean|Δ|':>12}{'max|Δ|':>12}{'Centroids':>12}\"\n",
+        "    header = f\"{'Split':<8}{'Variant':<20}{'mean|\u0394|':>12}{'max|\u0394|':>12}{'Centroids':>12}\"\n",
         "    print(header)\n",
         "    print('-' * len(header))\n",
         "    for entry in variant_stats:\n",
         "        print(f\"{entry['split']:<8}{entry['variant']:<20}{entry['mean_abs_diff']:>12.6f}{entry['max_abs_diff']:>12.6f}{entry['unique_centroids']:>12}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === Codebook inspection ===\n",
+        "CODEBOOK_DIR = DST_DATASET_DIR / \"codebooks\"\n",
+        "centroid_cache: Dict[str, torch.Tensor] = {}\n",
+        "print(\"== Loading discretization centroids ==\")\n",
+        "for variant in VARIANTS:\n",
+        "    npy_path = CODEBOOK_DIR / f\"{variant}_centroids.npy\"\n",
+        "    pt_path = CODEBOOK_DIR / f\"{variant}_centroids.pt\"\n",
+        "    if npy_path.exists():\n",
+        "        centers = np.load(npy_path)\n",
+        "    elif pt_path.exists():\n",
+        "        centers = torch.load(pt_path, map_location=\"cpu\")\n",
+        "        if torch.is_tensor(centers):\n",
+        "            centers = centers.cpu().numpy()\n",
+        "    else:\n",
+        "        print(f\"[warn] Missing centroids for {variant} in {CODEBOOK_DIR}\")\n",
+        "        continue\n",
+        "    centers_tensor = torch.as_tensor(centers, dtype=torch.float32)\n",
+        "    centroid_cache[variant] = centers_tensor\n",
+        "    print(f\"{variant}: shape={tuple(centers_tensor.shape)}\")\n",
+        "    print(centers_tensor)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === Unique centroid diagnostics (valid vs padded) ===\n",
+        "print(\"== Unique centroid counts including/excluding padding ==\")\n",
+        "for split in SPLITS:\n",
+        "    lengths = load_lengths(DST_DATASET_DIR / split)\n",
+        "    for variant in VARIANTS:\n",
+        "        var_path = DST_DATASET_DIR / split / f\"rel_actions_discretized_{variant}.pth\"\n",
+        "        if not var_path.exists():\n",
+        "            print(f\"[skip] Missing {var_path}\")\n",
+        "            continue\n",
+        "        disc_tensor = torch.load(var_path, map_location=\"cpu\")\n",
+        "        flat_all = disc_tensor.reshape(-1, disc_tensor.shape[-1])\n",
+        "        unique_all = torch.unique(flat_all, dim=0)\n",
+        "        flat_valid = flatten_valid_tensor(disc_tensor, lengths)\n",
+        "        unique_valid = torch.unique(flat_valid, dim=0) if flat_valid.numel() else torch.empty((0, disc_tensor.shape[-1]), dtype=disc_tensor.dtype)\n",
+        "        padding_vecs = []\n",
+        "        if unique_valid.shape[0] < unique_all.shape[0]:\n",
+        "            if unique_valid.numel():\n",
+        "                dists = torch.cdist(unique_all, unique_valid)\n",
+        "                unmatched = dists.min(dim=1).values > 1e-6\n",
+        "                padding_vecs = unique_all[unmatched].tolist()\n",
+        "            else:\n",
+        "                padding_vecs = unique_all.tolist()\n",
+        "        padding_str = f\", padding vectors={padding_vecs}\" if padding_vecs else \"\"\n",
+        "        print(f\"[{split}/{variant}] unique(all)={unique_all.shape[0]}, unique(valid)={unique_valid.shape[0]}{padding_str}\")\n",
+        "        del disc_tensor, flat_all, unique_all, flat_valid, unique_valid\n",
+        "    gc.collect()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === Spot-check discretized samples ===\n",
+        "SAMPLES_PER_SPLIT: Dict[str, List[Tuple[int, int]]] = {}\n",
+        "rng = np.random.default_rng(0)\n",
+        "NUM_SAMPLES = 5\n",
+        "for split in SPLITS:\n",
+        "    lengths = load_lengths(SRC_DATASET_DIR / split)\n",
+        "    SAMPLES_PER_SPLIT[split] = sample_valid_positions(lengths, NUM_SAMPLES, rng=rng)\n",
+        "    print(f\"Sampled positions for {split}: {SAMPLES_PER_SPLIT[split]}\")\n",
+        "\n",
+        "print(\"\\n== Discretization spot-checks ==\")\n",
+        "for split in SPLITS:\n",
+        "    src_actions = torch.load(SRC_DATASET_DIR / split / ACTIONS_FNAME, map_location=\"cpu\")\n",
+        "    lengths = load_lengths(SRC_DATASET_DIR / split)\n",
+        "    for variant in VARIANTS:\n",
+        "        var_path = DST_DATASET_DIR / split / f\"rel_actions_discretized_{variant}.pth\"\n",
+        "        if not var_path.exists():\n",
+        "            print(f\"[skip] Missing {var_path}\")\n",
+        "            continue\n",
+        "        disc_tensor = torch.load(var_path, map_location=\"cpu\")\n",
+        "        centroids = centroid_cache.get(variant)\n",
+        "        if centroids is None:\n",
+        "            print(f\"[skip] No centroids loaded for {variant}\")\n",
+        "            continue\n",
+        "        print(f\"\\n[{split}/{variant}] Checking {len(SAMPLES_PER_SPLIT[split])} samples\")\n",
+        "        for epi, step in SAMPLES_PER_SPLIT[split]:\n",
+        "            if step >= lengths[epi]:\n",
+        "                print(f\"  [skip] episode {epi} shorter than step {step}\")\n",
+        "                continue\n",
+        "            orig = src_actions[epi, step]\n",
+        "            disc = disc_tensor[epi, step]\n",
+        "            dists = torch.norm(centroids - disc, dim=1)\n",
+        "            centroid_idx = int(torch.argmin(dists).item())\n",
+        "            centroid = centroids[centroid_idx]\n",
+        "            disc_centroid_max = float((disc - centroid).abs().max().item())\n",
+        "            orig_centroid_dist = float(torch.norm(orig - centroid).item())\n",
+        "            orig_disc_dist = float(torch.norm(orig - disc).item())\n",
+        "            print(f\"  epi={epi:05d}, step={step:03d}, centroid={centroid_idx:02d}, |orig-centroid|={orig_centroid_dist:.4f}, |orig-disc|={orig_disc_dist:.4f}, max|disc-centroid|={disc_centroid_max:.2e}\")\n",
+        "            print(f\"    original    : {orig.tolist()}\")\n",
+        "            print(f\"    centroid    : {centroid.tolist()}\")\n",
+        "            print(f\"    discretized : {disc.tolist()}\")\n",
+        "        del disc_tensor\n",
+        "    del src_actions\n",
+        "    gc.collect()\n"
       ]
     }
   ],
