Add dataset normalization statistics cell

--- a/notebooks/pusht_discretization_verification.ipynb
+++ b/notebooks/pusht_discretization_verification.ipynb
@@ -179,6 +179,53 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Dataset normalization stats\n",
+        "Compute per-dimension mean and standard deviation for a chosen dataset to help with normalization. Update the dataset root or splits as needed before running.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# === Dataset normalization stats ===\n",
+        "NORMALIZATION_DATASET_DIR = SRC_DATASET_DIR  # change to DST_DATASET_DIR or a subset root if desired\n",
+        "NORMALIZATION_SPLITS = (\"train\",)  # typically normalization is computed on the train split\n",
+        "TARGET_FILES = (STATES_FNAME, VELOCITIES_FNAME, ACTIONS_FNAME, ABS_ACTIONS_FNAME)\n",
+        "\n",
+        "def compute_mean_std(split_dir: Path, lengths: np.ndarray, fname: str) -> tuple[torch.Tensor, torch.Tensor]:\n",
+        "    path = split_dir / fname\n",
+        "    tensor = torch.load(path, map_location=\"cpu\")\n",
+        "    flat = flatten_valid_tensor(tensor, lengths)\n",
+        "    if flat.numel() == 0:\n",
+        "        raise ValueError(f\"No valid samples found in {path}\")\n",
+        "    mean = flat.mean(dim=0)\n",
+        "    std = flat.std(dim=0, unbiased=False)\n",
+        "    return mean, std\n",
+        "\n",
+        "print(\"== Normalization statistics ==\")\n",
+        "for split in NORMALIZATION_SPLITS:\n",
+        "    split_dir = NORMALIZATION_DATASET_DIR / split\n",
+        "    lengths = load_lengths(split_dir)\n",
+        "    if lengths.size == 0:\n",
+        "        print(f\"[skip] No episodes found for {split_dir}\")\n",
+        "        continue\n",
+        "    for fname in TARGET_FILES:\n",
+        "        path = split_dir / fname\n",
+        "        if not path.exists():\n",
+        "            print(f\"[skip] Missing {path}\")\n",
+        "            continue\n",
+        "        mean, std = compute_mean_std(split_dir, lengths, fname)\n",
+        "        print(f\"[{split}] {fname}: mean shape={tuple(mean.shape)}, std shape={tuple(std.shape)}\")\n",
+        "        print(f\"    mean={mean.tolist()}\")\n",
+        "        print(f\"    std ={std.tolist()}\")\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "id": "3c4c34b5",
